# migration

./: .gitignore  LICENSE  README.md  migrate.py  pyproject.toml
examples/: 001_create_users.up.sql  002_create_posts.up.sql  migrate.example.toml
migrate_pkg/: __init__.py  core.py  models.py
migrate_pkg/cli/: __init__.py  main.py
migrate_pkg/drivers/: __init__.py  base.py  mysql.py  postgres.py  sqlite.py
tests/: test_migrator.py
